fix: nav overflowing

--- a/src/scss/cart/_cart-container.scss
+++ b/src/scss/cart/_cart-container.scss
@@ -87,8 +87,8 @@
 
 
   &__total-container {
-    margin: 4rem 1.25rem;
-    padding: 2rem 0;
+    margin: 3rem 1.25rem;
+    padding: 3rem 0;
     margin-bottom: 0;
     padding-bottom: 0;
     border-top: 2px solid var(--yellow);
