--- a/src/scss/footer/footer.scss
+++ b/src/scss/footer/footer.scss
@@ -51,7 +51,6 @@
 
   &__item {
     display: flex;
-    gap: max(.5rem, 1vh);
     flex-direction: column;
     justify-content: center;
     align-items: center;
